# agent-muscle

./: CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: reusable-build.yml  stage-release-publish.yml  stage-test.yml
agent-muscle/: Cargo.toml
agent-muscle/src/: config.rs  dataset.rs  executor.rs  jetstream_consumer.rs  lib.rs  main.rs  manifest.rs  mcp_server.rs  serve.rs  spine.rs  train.rs  update.rs
agent-muscle/src/finetune/: candle.rs  mlx.rs  mod.rs
agent-muscle/src/k8s/: gpu_job.rs  mod.rs  operator.rs
docs/architecture/: README.md
scripts/: build-release-macos.sh  install.sh  sign-macos.sh  sync-local-release.sh
