[package]
name = "agent-muscle"
version = "0.7.8"
edition = "2021"

[features]
default = []
candle = ["dep:candle-core"]

[dependencies]
agent-body-core = { git = "https://github.com/autonomic-ai-dev/agent-body", tag = "v0.5.13", features = ["nats"] }
anyhow = "1"
async-nats = "0.39"
axum = "0.7"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
dirs = "5"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
candle-core = { version = "0.8.4", optional = true }

[dev-dependencies]
tempfile = "3"
